fix: chrome scrollbar issue

--- a/src/main/webapp/src/assets/main.scss
+++ b/src/main/webapp/src/assets/main.scss
@@ -22,6 +22,5 @@
 
 .app-container {
   height: 100vh !important;
-  width: 100vw !important;
   overflow: hidden;
 }
